--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-323.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-715.8KB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-166.0KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65002, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-239.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇭🇰 香港-229.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.39MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.12MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇨🇳 中国-647.8KB/s(Youtube:不良林), server: 111.45.22.136, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇬🇧 英国-371.9KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-601.4KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-184.7KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65002, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-450.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 5003, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-365.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-428.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.18MB/s(Youtube:不良林), server: 120.233.29.189, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇳 中国-1.94MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65025, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-626.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-323.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-715.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-166.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-239.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-229.5KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.12MB/s(Youtube:不良林)
-      - 🇨🇳 中国-647.8KB/s(Youtube:不良林)
-      - 🇬🇧 英国-371.9KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-3.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-450.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.18MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
