--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-428.7KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-184.7KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65002, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-972.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-626.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇯🇵 日本-1.44MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-817.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-1.94MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65025, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-340.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-327.4KB/s(Youtube:不良林), server: 194.156.231.253, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-428.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-184.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-444.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-626.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-310.5KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-760.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
+      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
