--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-972.9KB/s(Youtube:不良林), server: 36.134.156.5, port: 65087, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-817.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65089, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.94MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65025, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-340.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.69MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.51MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-327.4KB/s(Youtube:不良林), server: 194.156.231.253, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-246.3KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-955.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65092, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-536.8KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: 36.134.154.119, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 38.68.135.18, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: 38.68.135.18, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-485.9KB/s(Youtube:不良林), server: 38.68.135.18, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.10MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-972.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-817.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.69MB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-327.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-246.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-955.2KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活8天)香港-2.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-536.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-485.9KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.10MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
